--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body class="page">
     <!--Header -->
-    <header class="page-header">
-      <div class="container main-nav">
-        <nav class="main-nav">
-          <a href="./index.html" lang="en" class="logo-web"
-            >Web<span class="logo-studio">Studio</span>
+    <header class="header">
+      <div class="header__container">
+        <nav class="header__nav">
+          <a class="header__logo" href="./index.html" lang="en" 
+            >Web<span class="header__logo-studio">Studio</span>
           </a>
-          <ul class="site-nav list">
-            <li class="item">
-              <a href="./index.html" class="link link-current">Студія</a>
+          <ul class="site-nav">
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link site-nav__link-current">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
+              <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
             </li>
-            <li class="item"><a href="" class="link">Контакти</a></li>
+            <li class="item"><a href="" class="site-nav__link">Контакти</a></li>
           </ul>
         </nav>
-        <div class="auth-nav">
-          <ul class="auth-nav list">
-            <li class="item">
-              <a class="link" href="mailto:info@devstudio.com"
-                ><svg class="icon-nav" width="16" height="12">
+        <div class="auth-nav__container">
+          <ul class="auth-nav">
+            <li class="auth-nav__item">
+              <a class="auth-nav__link" href="mailto:info@devstudio.com"
+                ><svg class="auth-nav__icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a
               >
             </li>
             <li class="item">
-              <a class="link" href="tel:+380961111111"
-                ><svg class="icon-nav" width="10" height="16">
+              <a class="auth-nav__link" href="tel:+380961111111"
+                ><svg class="auth-nav__icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
