--- a/portfolio.html
+++ b/portfolio.html
@@ -13,37 +13,37 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./dist/css/portfolio.min.css" />
   </head>
   <body>
     <!--Header -->
-    <header class="page-header">
-      <div class="container main-nav">
-        <nav class="main-nav">
-          <a href="./index.html" lang="en" class="logo-web"
-            >Web<span class="logo-studio">Studio</span>
+    <header class="header">
+      <div class="header__container">
+        <nav class="header__nav">
+          <a class="header__logo" href="./index.html" lang="en" 
+            >Web<span class="header__logo-studio">Studio</span>
           </a>
-          <ul class="site-nav list">
-            <li class="item">
-              <a href="./index.html" class="link">Студія</a>
+          <ul class="site-nav">
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link link-current">Портфоліо</a>
+              <a href="./portfolio.html" class="site-nav__link site-nav__link-current">Портфоліо</a>
             </li>
-            <li class="item"><a href="" class="link">Контакти</a></li>
+            <li class="item"><a href="" class="site-nav__link">Контакти</a></li>
           </ul>
         </nav>
-        <div class="auth-nav">
-          <ul class="auth-nav list">
-            <li class="item">
-              <a class="link" href="mailto:info@devstudio.com"
-                ><svg class="icon-nav" width="16" height="12">
+        <div class="auth-nav__container">
+          <ul class="auth-nav">
+            <li class="auth-nav__item">
+              <a class="auth-nav__link" href="mailto:info@devstudio.com"
+                ><svg class="auth-nav__icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a
               >
             </li>
             <li class="item">
-              <a class="link" href="tel:+380961111111"
-                ><svg class="icon-nav" width="10" height="16">
+              <a class="auth-nav__link" href="tel:+380961111111"
+                ><svg class="auth-nav__icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -256,63 +256,63 @@
       </section>
     </main>
     <!--footer-->
-  <footer class="footer">
-    <div class="footer-container container">
+ <footer class="footer">
+    <div class="footer__container">
         <div>
-          <a href="./index.html" lang="en"
-            ><span class="logo-footer-web">Web</span
-            ><span class="logo-footer-studio">Studio</span>
+          <a class="footer__logo" href="./index.html" lang="en"
+            >Web</span
+            ><span class="footer__logo-studio">Studio</span>
           </a>
           <address class="address">
-            <ul class="list">
-              <li class="item">
+            <ul class="address-list">
+              <li class="address-list__item">
                 <a
-                  class="address-link"
+                  class="address-list__link"
                   href="https://www.google.com/maps/place/Top+Pacers/@50.4266859,30.5382264,19z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033fffff:0x7d92f9458d0f64e0!8m2!3d50.4265807!4d30.5383858"
                   target="_blank"
                   rel="noreferrer noopener"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item">
-                <a href="mailto:info@example.com" class="mail-link list-link"
+              <li class="address-list__item">
+                <a href="mailto:info@example.com" class="address-list__link address-list__link--grey"
                   >info@example.com</a
                 >
               </li>
-              <li class="item">
-                <a href="tel:+380991111111" class="list-link"
+              <li class="address-list__item">
+                <a href="tel:+380991111111" class="address-list__link address-list__link--grey"
                   >+38 099 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-links">
-          <p class="join">приєднуйтесь</p>
-          <ul class="socials list">
-            <li class="item">
-              <a class="link" href="#" target="_blank" rel="noreferrer noopener"
-                ><svg class="icon-item" width="20" height="20">
+        <div class="socials-links">
+          <p class="socials-links__title">приєднуйтесь</p>
+          <ul class="socials">
+            <li class="socials__item">
+              <a class="socials__link" href="#" target="_blank" rel="noreferrer noopener"
+                ><svg class="socials__icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-inst"></use></svg></a>
             </li>
-            <li class="item">
-              <a class="link" href="#" target="_blank" rel="noreferrer noopener"
-                ><svg class="icon-item" width="20" height="20">
+            <li class="socials__item">
+              <a class="socials__link" href="#" target="_blank" rel="noreferrer noopener"
+                ><svg class="socials__icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-twit"></use></svg></a>
             </li>
-            <li class="item">
-              <a class="link" href="#" target="_blank" rel="noreferrer noopener"
-                ><svg class="icon-item" width="20" height="20">
+            <li class="socials__item">
+              <a class="socials__link" href="#" target="_blank" rel="noreferrer noopener"
+                ><svg class="socials__icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-face"></use></svg></a>
             </li>
-            <li class="item">
+            <li class="socials__item">
               <a
-                class="link"
+                class="socials__link"
                 href="#"
                 target="_blank"
                 rel="noreferrer noopener"
               >
-                <svg class="icon-item" width="20" height="20">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linke"></use>
                 </svg>
               </a>
@@ -320,19 +320,19 @@
           </ul>
         </div>
       <form action="#" class="footer-form js-speaker-form">
-        <b class="footer-form-title">Підпишіться на розсилку</b>
-        <div class="footer-form-group">
+        <b class="footer-form__title">Підпишіться на розсилку</b>
+        <div class="footer-form__group">
           <input
-            class="footer-form-input"
+            class="footer-form__input"
             type="email"
             name="footer-email-form"
             id="footer-email"
             placeholder=" "
           />
-          <label class="footer-form-lable" for="footer-email">E-mail</label>
+          <label class="footer-form__lable" for="footer-email">E-mail</label>
           <button class="footer-button" type="submit">
           Підписатися
-          <svg class="footer-button-icon" width="24" height="24"> <use href="./images/symbol-defs.svg#icon-send"></use></svg>
+          <svg class="footer-button__icon" width="24" height="24"> <use href="./images/symbol-defs.svg#icon-send"></use></svg>
         </button>
         </div>
       </form>
