--- a/index.html
+++ b/index.html
@@ -458,8 +458,7 @@
     <div class="footer__container">
         <div>
           <a class="footer__logo" href="./index.html" lang="en"
-            >Web</span
-            ><span class="footer__logo-studio">Studio</span>
+            >Web<span class="footer__logo-studio">Studio</span>
           </a>
           <address class="address">
             <ul class="address-list">
@@ -538,74 +537,74 @@
   </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button data-modal-close type="button" class="modal-button-close">
-          <svg class="close-icon" width="18" height="18">
+        <button data-modal-close type="button" class="modal__button-close">
+          <svg width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
         </button>
-        <p class="modal-discription">Залиште свої дані, ми вам передзвонимо</p>
-        <form action="#" class="js-speaker-form form">
-          <div class="form-group form-name">
-            <label class="form-label" for="name">Ім'я</label>
+        <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
+        <form action="#" class="js-speaker-form modal-form">
+          <div class="modal-form__group">
+            <label class="modal-form__label" for="name">Ім'я</label>
             <input
-              class="form-input form-input-name"
+              class="modal-form__input"
               type="text"
               name="user-name"
               id="name"
             />
-            <svg class="input-icon input-icon-name" width="18" height="18">
+            <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-person-black"></use>
             </svg>
           </div>
-          <div class="form-group form-tell">
-            <label class="form-label" for="tell">Телефон</label>
+          <div class="modal-form__group">
+            <label class="modal-form__label" for="tell">Телефон</label>
             <input
-              class="form-input form-input-tell"
+              class="modal-form__input"
               type="text"
               name="tell"
               id="tell"
             />
-            <svg class="input-icon input-icon-tell" width="18" height="18">
+            <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone-black"></use>
             </svg>
           </div>
-          <div class="form-group form-email">
-            <label class="form-label" for="email">Пошта</label>
+          <div class="modal-form__group">
+            <label class="modal-form__label" for="email">Пошта</label>
             <input
-              class="form-input form-input-email"
+              class="modal-form__input"
               type="text"
               name="email"
               id="email"
             />
-            <svg class="input-icon input-icon-email" width="18" height="18">
+            <svg class="modal-form__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-email-black"></use>
             </svg>
           </div>
-          <div class="form-group form-feedback">
-            <label class="form-label" for="feedback">Коментар</label>
+          <div class="modal-form__group form-feedback">
+            <label class="modal-form__label" for="feedback">Коментар</label>
             <textarea
-              class="textarea-input"
+              class="modal-form__textarea-input"
               name="feedback"
               rows="5"
               placeholder="Введіть текст"
               id="feedback"
             ></textarea>
           </div>
-          <div class="form-checkbox">
-            <label class="checkbox-label">
-              <input class="checkbox-input" type="checkbox" name="agreement" />
-              <span class="checkbox-icon-span">
-                <svg class="checkbox-icon" width="16" height="15">
+          <div class="checkbox">
+            <label class="checkbox__label">
+              <input class="checkbox__input" type="checkbox" name="agreement" />
+              <span class="checkbox__icon-container">
+                <svg class="checkbox__icon" width="16" height="15">
                   <use href="./images/symbol-defs.svg#icon-check"></use>
                 </svg>
               </span>
-              <span class="checkbox-text"
+              <span class="checkbox__meta"
                 >Погоджуюся з розсилкою та приймаю</span
               >
-              <a class="checkbox-link" href="#">Умови договору</a>
+              <a class="checkbox__link" href="#">Умови договору</a>
             </label>
           </div>
-          <button class="form-button" type="submit">Відправити</button>
+          <button class="modal-form-button" type="submit">Відправити</button>
         </form>
       </div>
     </div>
