--- a/portfolio.html
+++ b/portfolio.html
@@ -55,35 +55,35 @@
     </header>
     <!--main-->
     <main>
-      <section class="main-section">
-        <div class="container">
-          <h1 lang="en" class="section-title main-title">Portfolio</h1>
+      <section class="portfolio">
+        <div class="portfolio__container">
+          <h1 lang="en" class="portfolio__title">Portfolio</h1>
           <!-- button list -->
-          <ul class="button-list list">
-            <li class="item">
-              <button type="button" class="button primary">Усі</button>
+          <ul class="portfolio__buttons">
+            <li>
+              <button type="button" class="portfolio__button--primary">Усі</button>
             </li>
-            <li class="item">
-              <button type="button" class="button secondary">Веб-сайти</button>
+            <li>
+              <button type="button" class="portfolio__button--secondary">Веб-сайти</button>
             </li>
-            <li class="item">
-              <button type="button" class="button secondary">Додатки</button>
+            <li>
+              <button type="button" class="portfolio__button--secondary">Додатки</button>
             </li>
-            <li class="item">
-              <button type="button" class="button secondary">Дизайн</button>
+            <li>
+              <button type="button" class="portfolio__button--secondary">Дизайн</button>
             </li>
-            <li class="item">
-              <button type="button" class="button secondary">Маркетинг</button>
+            <li>
+              <button type="button" class="portfolio__button--secondary">Маркетинг</button>
             </li>
           </ul>
           <!-- Cards Set -->
-          <ul class="card-set list">
-            <li class="card-item">
-              <a class="card-link" href="#">
-                <div class="card-thumb"
-                  ><img class="card-img" src="./images/Технокряк.jpg" alt="website" width="370" />
+          <ul class="card-set">
+            <li class="card-set__item">
+              <a class="card-set__link" href="#">
+                <div class="card-set__thumb"
+                  ><img src="./images/Технокряк.jpg" alt="website" width="370" />
                   <div class="card-overlay">
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -91,20 +91,20 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Технокряк</h2> <p class="card-text">Веб-сайт</p>
+                  <h2 class="card-content__title">Технокряк</h2> <p class="card-content__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img
                     src="./images/Постер-New-Orlean.jpg"
                     alt="basketball-players"
                     width="370"
                   /><div class="card-overlay">
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -112,18 +112,18 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title"> Постер New Orlean vs Golden Star </h2>
-                  <p class="card-text">Дизайн</p>
+                  <h2 class="card-content__title"> Постер New Orlean vs Golden Star </h2>
+                  <p class="card-content__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img src="./images/Ресторан-Seafood.jpg" alt="Seafood-restorant" width="370" />
                   <div class="card-overlay">
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -131,19 +131,20 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Ресторан Seafood</h2>
-                  <p class="card-text">Додаток</p>
+                  <h2 class="card-content__title">Ресторан Seafood</h2>
+                  <p class="card-content__text">Додаток</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb">
-                  <img src="./images/Проєкт-Prime.jpg" alt="Headphones" width="370" /><div
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb">
+                  <img src="./images/Проєкт-Prime.jpg" alt="Headphones" width="370" />
+                  <div
                     class="card-overlay"
                   >
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -151,18 +152,18 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Проєкт Prime</h2> <p class="card-text">Маркетинг</p>
+                  <h2 class="card-content__title">Проєкт Prime</h2> <p class="card-content__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb">
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb">
                   <img src="./images/Проєкт-Boxes.jpg" alt="Project-boxes" width="370" /><div
                     class="card-overlay"
                   >
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -170,18 +171,18 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Проєкт Boxes</h2> <p class="card-text">Додаток</p>
+                  <h2 class="card-content__title">Проєкт Boxes</h2> <p class="card-content__text">Додаток</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img src="./images/Inspiration-has-no-Borders.jpg" alt="Imac" width="370" /><div
                     class="card-overlay"
                   >
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -189,19 +190,19 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Inspiration has no Borders</h2>
-                  <p class="card-text">Веб-сайт</p>
+                  <h2 class="card-content__title">Inspiration has no Borders</h2>
+                  <p class="card-content__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img src="./images/Видання-Limited-Edition.jpg" alt="book" width="370" /><div
                     class="card-overlay"
                   >
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -209,19 +210,19 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Видання Limited Edition</h2>
-                  <p class="card-text">Дизайн</p>
+                  <h2 class="card-content__title">Видання Limited Edition</h2>
+                  <p class="card-content__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img src="./images/Проект-LAB.jpg" alt="tag" width="370" /><div
                     class="card-overlay"
                   >
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -229,17 +230,17 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Проект LAB</h2> <p class="card-text">Маркетинг</p>
+                  <h2 class="card-content__title">Проект LAB</h2> <p class="card-content__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a class="card-link" href="#"
-                ><div class="card-thumb"
+            <li class="card-set__item">
+              <a class="card-set__link" href="#"
+                ><div class="card-set__thumb"
                   ><img src="./images/Growing-Business.jpg" alt="growing-business" width="370" />
                   <div class="card-overlay">
-                    <p class="card-overlay-text"
+                    <p class="card-overlay__text"
                       >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                       сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                       компанію чи приватну особу.</p
@@ -247,7 +248,7 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-title">Growing Business</h2> <p class="card-text">Додаток</p>
+                  <h2 class="card-content__title">Growing Business</h2> <p class="card-content__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -256,12 +257,11 @@
       </section>
     </main>
     <!--footer-->
- <footer class="footer">
+  <footer class="footer">
     <div class="footer__container">
         <div>
           <a class="footer__logo" href="./index.html" lang="en"
-            >Web</span
-            ><span class="footer__logo-studio">Studio</span>
+            >Web<span class="footer__logo-studio">Studio</span>
           </a>
           <address class="address">
             <ul class="address-list">
