--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
             >Web<span class="header__logo-studio">Studio</span>
           </a>
           <ul class="site-nav">
-            <li class="site-nav__item">
+            <li>
               <a href="./index.html" class="site-nav__link site-nav__link-current">Студія</a>
             </li>
-            <li class="item">
+            <li>
               <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
             </li>
-            <li class="item"><a href="" class="site-nav__link">Контакти</a></li>
+            <li><a href="" class="site-nav__link">Контакти</a></li>
           </ul>
         </nav>
         <div class="auth-nav__container">
           <ul class="auth-nav">
-            <li class="auth-nav__item">
+            <li>
               <a class="auth-nav__link" href="mailto:info@devstudio.com"
                 ><svg class="auth-nav__icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a
               >
             </li>
-            <li class="item">
+            <li>
               <a class="auth-nav__link" href="tel:+380961111111"
                 ><svg class="auth-nav__icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
